# arcsim-cpu

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  install.sh
conf/: sphere.json
src/: collision.cpp  eigen.cpp  handle.cpp  io.cpp  io.hpp  localopt.cpp  main.cpp  runphysics.cpp  runphysics.hpp  simulation.cpp  subset.cpp
